--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <div class="col-md-6" data-aos="zoom-out" data-aos-delay="300">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
-                  <h3></h3>Real-Time Location Tracking
+                  <h3>Real-Time Location Tracking</h3>
                 </div>
               </div>
 
