--- a/blog-single.html
+++ b/blog-single.html
@@ -155,7 +155,7 @@
     </div>
     <div class="credits">
      
-      Made by Krish with ❤️
+      Made by Cartrackerz with ❤️
     </div>
   </div>
 </footer><!-- End Footer -->
