--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/1.png" class="img-fluid" alt="">
+              <img src="assets/img/live.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>App 1</h4>
                 <p>App</p>
@@ -417,7 +417,22 @@
               </div>
             </div>
           </div> -->
+                                                                                             
+      <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>App 1</h4>
+                <p>App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/1.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
